# mosaiks

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  README_DEMO.ipynb  check_version.py  project_config.cfg  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  requirements_test.txt
.github/workflows/: publish_to_pypi.yml  pytest.yml
config/: data_catalog.yaml  featurisation.yaml  featurisation_config.yaml  geographic_bounds.yaml  preprocessing.yaml  rasterioc_config.yaml  satellite_config.yaml
mosaiks/: __init__.py  checks.py  utils.py
mosaiks/custom/: mosaiks_data.py
mosaiks/featurize/: __init__.py
mosaiks/fetch/: images.py  (+1 more)
notebooks/: MOSAIKS_API_Demo_for_Python.ipynb  POC.ipynb  old_NASA_shapes.ipynb  test_map_shapefile.ipynb
playground/: Untitled.ipynb  azure_test.ipynb  azure_test1.ipynb  featurize_pipeline.ipynb  featurize_pipeline_chunksize.ipynb  featurize_pipeline_debug.ipynb  featurize_pipeline_new_dask.ipynb  featurize_pipeline_refactored GEE.ipynb  featurize_pipeline_refactored.ipynb  matplotlibrc  pipeline.py  poornima_playground.ipynb  preprocess_pipeline.ipynb  scraps.ipynb  test.ipynb  test_big_pipeline_function.ipynb  test_s3_upload.ipynb
src/: 00_preprocess_combine_shrug_keys_with_shapes.py  00_preprocess_shrug_rural_keys.py  01_preprocess_create_mosaiks_points.py  Modelling POC.ipynb  Mosaiks Featurization POC.ipynb  featurize.py  mosaiks-poc.ipynb  nn_forward_pass.py  utils.py
tests/: conftest.py  test_dask_run.py  test_data_load.py  test_featurize.py  test_image_fetch.py  test_stac_fetch.py
(+64 files in other folders)
