[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "mosaiks"
description = "Use MOSAIKS algorithm to create features for an ML model"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["satellite", "mosaiks", "geospatial"]
authors = [
    {name = "IDinsight"}
]
dynamic = ["version", "dependencies", "optional-dependencies"]

[tool.setuptools.packages.find]
include = ["mosaiks*"]
exclude = ["tests*", "playground*", "data*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "mosaiks.__version__"}
